# vkw

./: .codeclimate.yml  CMakeLists.txt  README.md  SDLVulkanWindow.h  SDLVulkanWindow_INIT.cpp  SDLVulkanWindow_USAGE.cpp  codeclimate.sh  conanfile.txt  conanfile_win.txt  example.cpp  example_GLFWWindow.cpp  example_SDLWindow.cpp  example_SDLWindow_2.cpp  example_myApplication.h  example_widget.cpp  example_widget_qt.cpp  example_widget_sdl.cpp
examples/: example_SDLWindow.cpp  example_SDLWindow_vulkanProfiles.cpp
include/vkw/: Frame.h  GLFWVulkanWindowAdapter.h  GLFWWidget.h  QtVulkanWidget.h  SDLVulkanWindow.h  SDLVulkanWindow_INIT.inl  SDLVulkanWindow_USAGE.inl  SDLWidget.h  VKWVulkanWindow.h  VKWVulkanWindow.inl  VKWVulkanWindowProfile.h  VulkanApplication.h  VulkanWindowAdapter.h  base_widget.h  vulkan_include.h
include/vkw/Adapters/: GLFWVulkanWindowAdapter.h  SDLVulkanWindowAdapter.h  VulkanWindowAdapter.h
